--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap");
 * {
   -webkit-box-sizing: border-box;
@@ -546,6 +547,86 @@ h2 span {
   display: -ms-flexbox;
   display: flex;
   gap: 20px;
+}
+
+.modal {
+  display: none;
+  z-index: 99;
+  background: rgba(64, 63, 61, 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.modal-close {
+  position: absolute;
+  top: -52px;
+  right: -43px;
+  border-radius: 100px;
+  cursor: pointer;
+}
+.modal-close:hover {
+  cursor: pointer;
+}
+.modal-window {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  margin: 0;
+  width: 900px;
+  border-radius: 9px;
+  -webkit-box-shadow: 0 2px 35px 14px rgba(13, 13, 13, 0.04);
+          box-shadow: 0 2px 35px 14px rgba(13, 13, 13, 0.04);
+  background: #E1D4C9;
+}
+.modal-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.modal-img {
+  border-radius: 9px 0 0 9px;
+  width: 50%;
+  /* Чтобы сохранить пропорции */
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.modal-content {
+  padding: 50px 20px 30px 30px;
+  font-weight: 400;
+  letter-spacing: 0.06em;
+  color: #000;
+  width: 350px;
+}
+.modal-content_header {
+  font-size: 35px;
+  line-height: 1.3;
+}
+.modal-content_subheader {
+  padding-top: 10px;
+  font-size: 20px;
+  line-height: 1.15;
+}
+.modal-content_descr {
+  font-size: 15px;
+  line-height: 1.1;
+  padding: 40px 0;
+}
+.modal-content_additional {
+  padding-bottom: 10px;
+  font-weight: 700;
+  line-height: 1.1;
+}
+.modal-content_additional:before {
+  content: "•";
+  padding-right: 10px;
+}
+.modal-content_additional span {
+  font-weight: 400;
 }
 
 .header_menu-link__underline {
