--- a/scss/blocks/_menu.scss
+++ b/scss/blocks/_menu.scss
@@ -1,3 +1,108 @@
+.modal {
+  display: none;
+  z-index: 99;
+  background: $background-backdrop;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
+  &-close {
+    position: absolute;
+    top: -52px;
+    right: -43px;
+    border-radius: 100px;
+    cursor: pointer;
+
+    &:hover {
+      cursor: pointer;
+
+    }
+  }
+
+  &-window {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    //z-index: 999;
+    width: 900px;
+    //height: 500px;
+    border-radius: 9px;
+    box-shadow: 0 2px 35px 14px rgba(13, 13, 13, 0.04);
+    background: $text-light;
+  }
+
+  &-wrapper {
+    display: flex;
+  }
+
+  &-img {
+    border-radius: 9px 0 0 9px;
+    //height: 100%;
+    width: 50%;
+    /* Чтобы сохранить пропорции */
+    object-fit: cover;
+    //height: 100%;
+  }
+
+  &-content {
+    padding: 50px 20px 30px 30px;
+    //font-family: $font-family;
+    font-weight: 400;
+    letter-spacing: 0.06em;
+    color: #000;
+    width: 350px;
+    //height: 303px;
+    // &-content_header
+
+    &_header {
+
+      font-size: 35px;
+      line-height: 1.3;
+
+    }
+
+    // &-content_subheader
+
+    &_subheader {
+      //white-space: nowrap;
+      padding-top: 10px;
+      font-size: 20px;
+      line-height: 1.15;
+    }
+
+    // &-content_descr
+
+    &_descr {
+      font-size: 15px;
+      line-height: 1.1;
+      padding: 40px 0;
+    }
+
+    &_additional {
+      padding-bottom: 10px;
+      font-weight: 700;
+      line-height: 1.1;
+
+      &:before {
+        content: "•";
+        padding-right: 10px;
+        //color: $color-primary;
+
+      }
+
+      span {
+        font-weight: 400;
+      }
+    }
+
+  }
+}
+
 .header {
   &_menu-link__underline {
     border-bottom: 1px solid $text-dark;
