--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap");
 * {
   -webkit-box-sizing: border-box;
@@ -550,7 +549,6 @@ h2 span {
 }
 
 .modal {
-  display: none;
   z-index: 99;
   background: rgba(64, 63, 61, 0.8);
   position: fixed;
@@ -558,75 +556,127 @@ h2 span {
   left: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  color: #403F3D;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
 }
-.modal-close {
-  position: absolute;
-  top: -52px;
-  right: -43px;
-  border-radius: 100px;
-  cursor: pointer;
-}
-.modal-close:hover {
-  cursor: pointer;
-}
-.modal-window {
+.modal_window {
   position: fixed;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   margin: 0;
-  width: 900px;
-  border-radius: 9px;
-  -webkit-box-shadow: 0 2px 35px 14px rgba(13, 13, 13, 0.04);
-          box-shadow: 0 2px 35px 14px rgba(13, 13, 13, 0.04);
+  width: 800px;
+  border-radius: 40px;
+  padding: 16px;
   background: #E1D4C9;
 }
-.modal-wrapper {
+.modal_wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  gap: 20px;
 }
-.modal-img {
-  border-radius: 9px 0 0 9px;
-  width: 50%;
-  /* Чтобы сохранить пропорции */
+.modal_img {
+  border-radius: 40px;
+  width: 310px;
+  height: 310px;
   -o-object-fit: cover;
      object-fit: cover;
 }
-.modal-content {
-  padding: 50px 20px 30px 30px;
+.modal_content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.modal_title {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.25;
+}
+.modal_descr {
+  margin-top: 12px;
   font-weight: 400;
-  letter-spacing: 0.06em;
-  color: #000;
-  width: 350px;
+  font-size: 16px;
+  line-height: 1.5;
 }
-.modal-content_header {
-  font-size: 35px;
-  line-height: 1.3;
+.modal_size .tab_buttons, .modal_add .tab_buttons {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
 }
-.modal-content_subheader {
-  padding-top: 10px;
-  font-size: 20px;
-  line-height: 1.15;
+.modal_price {
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.25;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
-.modal-content_descr {
-  font-size: 15px;
-  line-height: 1.1;
-  padding: 40px 0;
+.modal_alert {
+  border-top: 1px solid #C1B6AD;
+  padding: 12px 0;
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+  font-size: 10px;
+  line-height: 1.4;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 8px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
-.modal-content_additional {
-  padding-bottom: 10px;
-  font-weight: 700;
-  line-height: 1.1;
+.modal_close {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 8px;
+  border: 1px solid #665F55;
+  border-radius: 100px;
+  padding: 10px 78px;
+  height: 44px;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  background: #E1D4C9;
 }
-.modal-content_additional:before {
-  content: "•";
-  padding-right: 10px;
-}
-.modal-content_additional span {
-  font-weight: 400;
+.modal_close:hover {
+  background: #665F55;
+  color: #E1D4C9;
+  cursor: pointer;
 }
 
 .header_menu-link__underline {
@@ -651,8 +701,10 @@ h2 span {
   font-style: italic;
 }
 
-.tab_buttons {
+.tab {
   margin-top: 40px;
+}
+.tab_buttons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
