--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -8,3 +8,6 @@ $background-backdrop: rgba(64, 63, 61, 0.80);
 
 $border-light: #C1B6AD;
 $border-dark: #665F55;
+
+$font-family: "Inter", sans-serif;
+$second-family: "Manrope", sans-serif;
