--- a/scss/blocks/_menu.scss
+++ b/scss/blocks/_menu.scss
@@ -1,5 +1,5 @@
 .modal {
-  display: none;
+  //display: none;
   z-index: 99;
   background: $background-backdrop;
   position: fixed;
@@ -7,99 +7,106 @@
   left: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  color: $text-dark;
+  font-family: $font-family;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
 
-  &-close {
-    position: absolute;
-    top: -52px;
-    right: -43px;
-    border-radius: 100px;
-    cursor: pointer;
-
-    &:hover {
-      cursor: pointer;
-
-    }
-  }
-
-  &-window {
+  &_window {
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     margin: 0;
-    //z-index: 999;
-    width: 900px;
-    //height: 500px;
-    border-radius: 9px;
-    box-shadow: 0 2px 35px 14px rgba(13, 13, 13, 0.04);
+    width: 800px;
+    border-radius: 40px;
+    padding: 16px;
     background: $text-light;
   }
 
-  &-wrapper {
+  &_wrapper {
     display: flex;
+    gap: 20px;
   }
 
-  &-img {
-    border-radius: 9px 0 0 9px;
-    //height: 100%;
-    width: 50%;
-    /* Чтобы сохранить пропорции */
+  &_img {
+    border-radius: 40px;
+    width: 310px;
+    height: 310px;
     object-fit: cover;
-    //height: 100%;
   }
 
-  &-content {
-    padding: 50px 20px 30px 30px;
-    //font-family: $font-family;
+  &_content {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+
+  }
+
+  &_title {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 1.25;
+  }
+
+  &_descr {
+    margin-top: 12px;
     font-weight: 400;
-    letter-spacing: 0.06em;
-    color: #000;
-    width: 350px;
-    //height: 303px;
-    // &-content_header
+    font-size: 16px;
+    line-height: 1.5;
+  }
 
-    &_header {
+  &_size,
+  &_add {
+    .tab_buttons {
+      justify-content: start;
+    }
+  }
 
-      font-size: 35px;
-      line-height: 1.3;
+  &_price {
+    font-family: $font-family;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 1.25;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &_alert {
+    border-top: 1px solid $border-light;
+    padding: 12px 0;
+    font-family: $font-family;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 1.4;
+    display: flex;
+    gap: 8px;
+    flex-direction: row;
+    align-items: start;
+    justify-content: space-between;
+  }
+
+  &_close {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 8px;
+    border: 1px solid $background-container;
+    border-radius: 100px;
+    padding: 10px 78px;
+    height: 44px;
+    transition: all 0.5s ease;
+    background: $text-light;
+
+    &:hover {
+      background: $background-container;
+      color: $text-light;
+      cursor: pointer;
 
     }
-
-    // &-content_subheader
-
-    &_subheader {
-      //white-space: nowrap;
-      padding-top: 10px;
-      font-size: 20px;
-      line-height: 1.15;
-    }
-
-    // &-content_descr
-
-    &_descr {
-      font-size: 15px;
-      line-height: 1.1;
-      padding: 40px 0;
-    }
-
-    &_additional {
-      padding-bottom: 10px;
-      font-weight: 700;
-      line-height: 1.1;
-
-      &:before {
-        content: "•";
-        padding-right: 10px;
-        //color: $color-primary;
-
-      }
-
-      span {
-        font-weight: 400;
-      }
-    }
-
   }
 }
 
@@ -130,8 +137,10 @@
 }
 
 .tab {
+  margin-top: 40px;
+
   &_buttons {
-    margin-top: 40px;
+
     display: flex;
     justify-content: center;
     gap: 16px;
@@ -160,12 +169,10 @@
     align-items: center;
     border-radius: 100px;
     border: 1px solid $border-dark;
-
   }
 }
 
 .menu-card {
-
   width: 310px;
   height: 506px;
   border-radius: 40px;
@@ -247,7 +254,6 @@
   border-radius: 100px;
   border: 1px solid $border-light;
   transition: all 0.5s;
-
 
   &_img {
     width: 30px;
