--- a/css/style.css
+++ b/css/style.css
@@ -562,6 +562,9 @@ h2 span {
   font-size: 16px;
   line-height: 1.5;
 }
+.modal-closed {
+  display: none;
+}
 .modal_window {
   position: fixed;
   top: 50%;
