--- a/scss/blocks/_menu.scss
+++ b/scss/blocks/_menu.scss
@@ -1,5 +1,4 @@
 .modal {
-  //display: none;
   z-index: 99;
   background: $background-backdrop;
   position: fixed;
@@ -12,6 +11,10 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
+
+  &-closed {
+    display: none;
+  }
 
   &_window {
     position: fixed;
